# SynLeth-RSES-NISE

./: .gitignore  CITATION.cff  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt  run_all.sh
config/: article_assets.yaml  cancers.yaml  drug_sensitivity_sources.yaml  extended_multiomics_asset.yaml  extended_multiomics_sources.yaml  genomic_circos_asset.yaml  pharmacology.yaml  real_data.yaml  score.yaml  structure_rendering.yaml
docs/: .publication_v0110_sync_marker  .publication_v0110_tree_marker  ALL_CLASS_AND_ALL_TARGET_DISCOVERY.md  ANALYSIS_PLAN.md  ARTICLE_ANALYSIS_OUTPUTS.md  DATA_ACQUISITION_AND_REPRODUCTION_V0110.md  DATA_ACQUISITION_STATUS.md  DATA_DICTIONARY.md  DOROTHEA_OFFICIAL_STATIC_FALLBACK.md  DOROTHEA_RECOVERY_WORKFLOW.md  DOROTHEA_SOURCE_STATUS_SCHEMA.md  END_TO_END_ARTICLE_PROTOCOL.md  END_TO_END_ARTICLE_PROTOCOL_V0102_ADDENDUM.md  END_TO_END_ARTICLE_PROTOCOL_V0103_ADDENDUM.md  EXPANDED_HUMAN_EVIDENCE_WORKFLOW.md  EXTENDED_MULTIOMICS_V0120.md  GENOMIC_CIRCOS_IMPLEMENTATION_CONTRACT_V0112.md  GENOMIC_CIRCOS_WORKFLOW_V0112.md  HPA_SUBCELLULAR_RECOVERY.md  METHYLATION_DATA_AND_SCORING_V0111.md  METHYLATION_INTEGRATION_V0111.md  OMNIPATH_OUTAGE_NOTE.md  PR18_MERGE_AND_REAL_DATA_RUN.md  PUBLICATION_COMPLETENESS_V0110.md  PUBLICATION_EVIDENCE_AUDIT_AND_REPRODUCTION.md  PUBLICATION_LAYOUT_RECOVERY_V0105.md  PUBLICATION_PHARMACOLOGY_WORKFLOW.md  PYTHON_ENTRYPOINT_RECOVERY.md  README_V0103_NOTE.md  REAL_DATA_WORKFLOW.md  REPRODUCIBILITY.md  SCIENTIFIC_FIGURE_SEMANTICS_V0106.md  SCRIPT_CATALOG.md  STRING_FUNCTIONAL_EVIDENCE_WORKFLOW.md  STRUCTURAL_ATLAS_WORKFLOW.md  V0103_CHANGELOG.md  V0107_IMPLEMENTATION_SCOPE.md  WGCNA_CORRELATION_POLICY_V0109.md  WGCNA_PROMOTER_REGULATORY_LAYER.md  script_manifest.tsv
manuscript/: RSES_Onco_intro_methods_draft_v0110.docx  RSES_Onco_intro_methods_draft_v0110.md  RSES_Onco_manuscript_source.md  RSES_Onco_methylation_methods_addendum_v0111.docx  RSES_Onco_methylation_methods_addendum_v0111.md  RSES_Onco_supplement_source.md
results/: dependency_contrasts.tsv  human_nise_relation_forest.nwk  literature_anchored_candidates.tsv
scripts/: acquire_pharmacology_evidence.py  acquire_tcga_nise_methylation.py  aggregate_gdc_gene_cna.py  aggregate_gdc_methylation.py  aggregate_wgcna_regulatory_layer.py  analyze_drug_response_selectivity.py  annotate_extended_layer_eligibility.py  apply_methylation_v0111_core_patch.py  apply_methylation_v0111_publication_patch.py  build_article_workbook.py  build_asset_reproduction_registry.py  build_empirical_workbook.py  build_expanded_candidate_universe.py  build_extended_multiomics_evidence.py  download_gdc.py  (+113 more)
(+78 files in other folders)
