[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rses-onco"
version = "0.12.0"
description = "Coverage-aware NISE and paralog cancer vulnerability framework with integrated functional-loss states, CRISPR confidence, multi-platform proteomics, RNAi validation, WGCNA, promoter methylation, genomic Circos, pharmacology and reproducible publication assets"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Leandro de Mattos Pereira"}]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
  "matplotlib>=3.7",
  "networkx>=3.1",
  "requests>=2.31",
  "pyyaml>=6.0",
  "openpyxl>=3.1",
  "pillow>=10.0",
  "python-docx>=1.1",
]

[project.scripts]
rses-onco = "rses_onco.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
